# max

./: .gitmodules  CMakeLists.txt  README.md
bgfx/examples/00-helloworld/: helloworld.cpp  vs_cube.sc  vs_mesh.sc
bgfx/examples/01-test/: main.cpp
bgfx/examples/01-test/ecs/: components.h
bgfx/examples/01-test/sharedbuffer/: sync_maya.cpp
bgfx/include/bgfx/: bgfx.h  defines.h
bgfx/src/: bgfx.cpp  bgfx_p.h  config.h  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_noop.cpp  entry_osx.mm  entry_sdl.cpp  entry_windows.cpp  entry_x11.cpp  physics_jolt.cpp  physics_noop.cpp  renderer_vk.cpp  vertexlayout.cpp
bgfx/tools/geometryc/: geometryc.cpp
bimg/include/bimg/: bimg.h  decode.h  encode.h
bimg/src/: bimg_p.h  config.h  image.cpp  image_cubemap_filter.cpp  image_decode.cpp  image_encode.cpp  image_gnf.cpp
bimg/tools/texturec/: texturec.cpp
cmake/: Config.cmake.in  maxToolUtils.cmake  version.cmake
cmake/bgfx/: CMakeLists.txt  bgfx.cmake  examples.cmake  geometryc.cmake  shaderc.cmake
cmake/bimg/: CMakeLists.txt  bimg.cmake  bimg_decode.cmake  bimg_encode.cmake  texturec.cmake
cmake/bx/: CMakeLists.txt  bin2c.cmake  bx.cmake
cmake/max/: CMakeLists.txt  examples.cmake  geometryc.cmake  max.cmake  project.cmake  shaderc.cmake  shared.cmake
cmake/max/util/: ConfigureDebugging.cmake
cmake/mink/: CMakeLists.txt
cmake/modules/: FindFbx.cmake
max/examples/00-helloworld/: fs_cube.sc  fs_mesh.sc  helloworld.cpp  main.cpp
max/examples/00-helloworld/shaders/: fs_bump.sc  fs_cube.sc  vs_bump.sc  vs_cube.sc
max/examples/01-mayabridge/: main.cpp
max/examples/01-mayabridge/shaders/: vs_mesh.sc
max/examples/01-test/: main.cpp
max/examples/01-test/ecs/: components.h
max/examples/01-test/sharedbuffer/: sync_maya.cpp  sync_maya.h
max/examples/common/: common.sh
max/include/max/: defines.h  embedded_shader.h  max.h  platform.h
max/src/: amalgamated.cpp  amalgamated.mm  charset.h  config.h  debug_renderdoc.cpp  debug_renderdoc.h  dxgi.cpp  dxgi.h  emscripten.h  entry_android.cpp  entry_glfw.cpp  entry_html5.cpp  entry_ios.mm  entry_noop.cpp  entry_osx.mm  entry_sdl.cpp  entry_windows.cpp  entry_x11.cpp  fs_clear0.bin.h  fs_clear0.sc  fs_clear1.bin.h  fs_clear1.sc  fs_clear2.bin.h  fs_clear2.sc  fs_clear3.bin.h  fs_clear3.sc  fs_clear4.bin.h  fs_clear4.sc  fs_clear5.bin.h  fs_clear5.sc  fs_clear6.bin.h  fs_clear6.sc  fs_clear7.bin.h  fs_clear7.sc  fs_debugdraw_fill.bin.h  fs_debugdraw_fill_lit.bin.h  fs_debugdraw_fill_texture.bin.h  fs_debugdraw_lines.bin.h  fs_debugdraw_lines_stipple.bin.h  fs_debugfont.bin.h  (+52 more)
max/tools/geometryc/: geometryc.cpp
max/tools/shaderc/: shaderc.cpp  shaderc.h  shaderc_glsl.cpp  shaderc_hlsl.cpp  shaderc_metal.cpp  shaderc_pssl.cpp  shaderc_spirv.cpp
