# Use mink's cmake script
set(MINK_BUILD_EXAMPLES OFF)
set(MINK_INSTALL_EXAMPLES OFF)
add_subdirectory(${MINK_DIR} mink-build)

target_include_directories(
	mink PUBLIC $<BUILD_INTERFACE:${MINK_DIR}/include>$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

if(BGFX_INSTALL)
	install(
		TARGETS mink
		EXPORT "${TARGETS_EXPORT_NAME}"
		LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
		ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
		RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
		INCLUDES
		DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
	)
	install(DIRECTORY ${MINK_DIR}/include/mink DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
endif()

set_target_properties(mink PROPERTIES FOLDER "bgfx")